# rscc

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
compiler/: Cargo.toml
compiler/src/parser/: keywords.rs  mod.rs  token.rs
