[package]
name = "cli"
version = "0.1.0"
authors = ["Daniel Illner <daniel.illner@outlook.de>"]
license = "Apache-2.0"
edition = "2021"
description = "A CLI tool for rscc."

[[bin]]
name = "rscc"
path = "src/main.rs"
test = false
bench = false

[dependencies]
compiler = { path = "../compiler" }
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
